[tool.poetry]
name = "Data Analysis in Python"
version = "0.1.0"
description = "Examples of Data Analysis in Python"
authors = ["friends lab"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
