[tool.poetry]
name = "Data Analysis in Python"
version = "0.1.0"
description = "Examples of Data Analysis in Python"
authors = ["friends lab"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
seaborn = "^0.12.2"
pyqt5 = "^5.15.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.285"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
